# xxHash

./: .gitignore  CMakeLists.txt  xxhash-config.cmake.in
.github/workflows/: scorecard.yml
